--- a/src/components/Loading/style.module.scss
+++ b/src/components/Loading/style.module.scss
@@ -1,17 +1,20 @@
 .wrap {
-    margin-top: 50%;
+    position: fixed;
+    top: 40%;
+    left: 50%;
     text-align: center;
+    transform: translate(-50%, -50%);
 }
 
 .ldsRipple {
     position: relative;
     display: inline-block;
-    width: 120px;
-    height: 120px;
+    width: 200px;
+    height: 200px;
 
     div {
         position: absolute;
-        border: 5px solid #CEF;
+        border: 10px solid #CEF;
         border-radius: 50%;
         opacity: 1;
         animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
@@ -23,8 +26,8 @@
 }
 @keyframes lds-ripple {
     0% {
-        top: 55px;
-        left: 55px;
+        top: 90px;
+        left: 90px;
         width: 0;
         height: 0;
         opacity: 1;
@@ -33,8 +36,8 @@
     100% {
         top: 0;
         left: 0;
-        width: 110px;
-        height: 110px;
+        width: 180px;
+        height: 180px;
         opacity: 0;
     }
 }
